# opsagent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
configs/: agent_config.yaml  dataset_config.yaml  evaluation_scenarios.yaml  model_config.yaml  rcaeval_published_baselines.yaml
context/: agent_specs.md  anomaly_detection_specs.md  architecture_and_design.md  causal_discovery_specs.md  config_reference.md  data_pipeline_specs.md  evaluation_strategy.md  infrastructure_and_serving.md
demo_app/: docker-compose.demo.yml
demo_app/fault_scenarios/: 01_service_crash.sh  02_high_latency.sh  03_memory_pressure.sh  04_cpu_throttling.sh  05_connection_exhaustion.sh  06_network_partition.sh  07_cascading_failure.sh  08_config_error.sh
docs/: CRISP_DM_Report.md  api_reference.md  architecture.md  baselines.md  evaluation_results.md  problem_statement.md  success_metrics.md
docs/images/: service_topology.html
infrastructure/docker_stats_exporter/: Dockerfile  exporter.py
infrastructure/loki/: loki-config.yml
infrastructure/otel-collector/: otel-collector-config.yaml
infrastructure/prometheus/: alert_rules.yml  prometheus.yml
infrastructure/promtail/: promtail-config.yml
infrastructure/service_probe_exporter/: Dockerfile  probe_exporter.py
notebooks/: 01_data_exploration.ipynb  02_rcaeval_exploration.ipynb  03_loghub_exploration.ipynb  04_log_parsing_analysis.ipynb  05_anomaly_detection_dev.ipynb  06_causal_discovery_dev.ipynb  07_agent_prototyping.ipynb  08_evaluation_analysis.ipynb
runbooks/: cascading_failure.md  connection_exhaustion.md  general_troubleshooting.md  high_latency.md  memory_pressure.md
scripts/: build_evaluation_notebook.py  download_datasets.py  generate_training_data.py  inject_faults.py  make_evaluation_charts.py  prepare_data_splits.py  prepare_quality_scoring.py  run_agent_demo.py  run_evaluation.py  start_infrastructure.sh  stop_infrastructure.sh
tests/: conftest.py
(+72 files in other folders)
