[tool.poetry]
name = "opsagent"
version = "0.1.0"
description = "Autonomous Root Cause Analysis Agent for Microservices"
authors = ["Srikar Pottabathula"]
readme = "README.md"
license = "MIT"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core
# PyTorch >=2.3 dropped macOS x86_64 wheels; pin to 2.2.x for Intel Mac compatibility.
# On Apple Silicon or Linux, this constraint can be relaxed to >=2.0.
torch = ">=2.0,<2.3"
pandas = ">=2.0"
numpy = ">=1.24,<2.0"
scikit-learn = ">=1.3"
networkx = ">=3.0"
pyyaml = ">=6.0"
python-dotenv = ">=1.0"
requests = ">=2.31"

# Log parsing
drain3 = ">=0.9"

# Streaming
confluent-kafka = ">=2.3"

# Metrics
prometheus-client = ">=0.19"

# Vector DB and embeddings
chromadb = ">=0.4"
sentence-transformers = ">=2.2"
# onnxruntime >=1.20 lacks macOS x86_64 wheels; pin for Intel Mac compatibility
onnxruntime = ">=1.17,<1.20"

# Causal discovery
causal-learn = ">=0.1"

# Agent orchestration
langgraph = ">=0.2"
langchain-google-genai = ">=1.0"
langchain-core = ">=0.2"

# API and dashboard
fastapi = ">=0.104"
uvicorn = {version = ">=0.24", extras = ["standard"]}
streamlit = ">=1.29"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.3"
mypy = ">=1.8"
pytest = ">=7.4"
pytest-asyncio = ">=0.23"
types-requests = ">=2.31"
types-pyyaml = ">=6.0"

[tool.poetry.group.eval.dependencies]
# RCAEval[default] pins torch==1.12.1 which conflicts with torch>=2.0.
# Install base package only; we manage torch separately.
RCAEval = ">=1.2.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
